; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_escape.c_escape_non_printable_full.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_escape.c_escape_non_printable_full.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @escape_non_printable_full(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %3
  %11 = load i8*, i8** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i8* @xescape_full(i8* %11, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i64 %12, i32 1)
  store i8* %13, i8** %4, align 8
  br label %18

14:                                               ; preds = %3
  %15 = load i8*, i8** %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = call i8* @utf8_escape_non_printable_full(i8* %15, i64 %16)
  store i8* %17, i8** %4, align 8
  br label %18

18:                                               ; preds = %14, %10
  %19 = load i8*, i8** %4, align 8
  ret i8* %19
}

declare dso_local i8* @xescape_full(i8*, i8*, i64, i32) #1

declare dso_local i8* @utf8_escape_non_printable_full(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
